[project]
name = "vuln-scanner"
version = "0.1.0"
description = "Multi-phase LLM-powered vulnerability scanner over git repos using isolated worktrees"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Patrick" }]

dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "pyright>=1.1",
]

[project.scripts]
vuln-scanner = "vuln_scanner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vuln_scanner", "src/taskrunner"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"


